# recall

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES.md  bacon.toml
.cargo/: config.toml
.github/workflows/: build.yml
src/: database.rs  file.rs  main.rs  ocr.rs
